# p2pyrate

./: .gitignore  README.md  flake.nix  pyproject.toml
scripts/: capture_net.sh
src/p2pyrate/: __init__.py  downloader.py  magnet.py  metadata.py  peer.py  udp_tracker.py  utils.py
src/p2pyrate/peer/: __init__.py  handshake.py  message.py  peer.py
src/p2pyrate/tests/: pcap.py
