[project]
name = "p2pyrate"
version = "0.1.0"
description = "BitTorrent client in pure python"
authors = [
    { name = "Onésime BERNARD", email = "onesime.bernard@ima.it" }
]
dependencies = [
    "asyncudp>=0.11.0",
    "async-timeout>=4.0.3",
    "aiohttp>=3.10.5",
    "bencode2>=0.2.4",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyright>=1.1.380",
    "ruff>=0.6.5",
    "tqdm>=4.66.5",
    "ipykernel>=6.29.5",
    "scapy>=2.5.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/p2pyrate"]
